docs(Matrix): :fire: remove decorators
remove useless decorators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "deno.enable": true,
-    "cSpell.words": ["Xirtam"]
+    "cSpell.words": ["Xirtam"],
+    "conventionalCommits.scopes": ["Matrix"]
 }
